avoid small white space on right edge of gallery

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -8,6 +8,10 @@
     // masonry is putting this gap below each image, adjust explicitly here
     margin-bottom: -7px !important
 
+.my-gallery
+  // avoid small white space on right edge of gallery
+  width: 100.5%
+
 // fluid 3 columns sizing
 // weird percentages to force full 3 column width:
 // https://metafizzy.co/blog/beyonce-seamless-fluid-image-masonry/
